# varDFE

./: .gitignore  README.md  dfe.yml  setup.cfg
example/: MIS.sfs  SYN.sfs  varDFE.ipynb
example/human_dfe/: human_dfe_part1.ipynb  human_dfe_part2.ipynb  human_dfe_refspectra.sh
example/human_dfe/sfs/: MIS-HS100.sfs  SYN-HS100.sfs
src/varDFE/: __init__.py
src/varDFE/DFE/: Cache1D_mod2.py  Cache1D_util.py  DFEGridsearchWorker.py  DFEInferenceWorker.py  DemogSelModels2.py  InputDFE.py  OutputDFE.py  PDFValidation.py  PDFs2.py  __init__.py
src/varDFE/Demography/: DemogValidation.py  Demographics1D2.py  InputDemog.py  OutputDemog.py  __init__.py
src/varDFE/Misc/: LoggerDFE.py  Plotting.py  Util.py  __init__.py
workflow/DFE/: DFE1D_gridsearch.py  DFE1D_inferenceFIM.py  DFE1D_refspectra.py
workflow/Demography/: Demog1D_sizechangeFIM.py
