[metadata]
name = varDFE
version = 0.0.1
author = Meixi Lin
author_email = 22927483+meixilin@users.noreply.github.com
description = Supplementary workflows to compare variations of DFE in natural populations based on dadi and fitdadi
long_description = file: README.md
long_description_content_type = text/markdown
url = xxx
project_urls =
    Bug Tracker = xxx
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src