[metadata]
name = varDFE
version = 0.1.0
author = Meixi Lin
author_email = 22927483+meixilin@users.noreply.github.com
description = Workflows to compare variations of DFE in natural populations based on dadi and fitdadi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/meixilin/varDFE
project_urls =
    Bug Tracker = https://github.com/meixilin/varDFE/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
